[package]
name = "turbo-loot-goblin"
version = "0.1.0"
edition = "2021"

[dependencies]
turbo = { version = ">=0.3.10", package = "turbo-genesis-sdk", features = ["solana"] }

[patch.crates-io]
cc = { git = "https://github.com/jozanza/cc-rs.git", branch = "wasm-patch" }

[lib]
crate-type = ["cdylib"]

[workspace]
